--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,5 +2,7 @@
   <ul class="menü-genel">
     <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-facebook"></i> Facebook </a></li>
     <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
+    <li><i class="fa fa-html5" aria-hidden="true"></i> HTML5</li>
+    <li><i class="fa fa-css3" aria-hidden="true"></i> CSS3</li>
   </ul>
 </div>
