--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,8 +1,8 @@
 <div class="beri-2" data-gnl="24 ortada göbekte">
   <ul class="menü-genel">
     <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
-    <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-facebook"></i> Facebook Gruplar </a></li>
-    <li><a href="https://www.facebook.com/datadeveb/"> <i class="fa fa-facebook"></i> Facebook Sayfa </a></li>
+    <li><a href="https://www.facebook.com/datadeveb/"> <i class="fa fa-facebook"></i> Facebook </a></li>
+    <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-facebook"></i> FB Gruplar </a></li>
     <li><a href="https://twitter.com/datadeveb"> <i class="fa fa-twitter"></i> Twitter </a></li>
     <li><a href="#"><i class="fa fa-html5" aria-hidden="true"></i> HTML5 </a></li>
     <li><a href="#"><i class="fa fa-css3" aria-hidden="true"></i> CSS3 </a></li>
