--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,11 @@
   <div data-gnl="24" class="header">
   {% include header.html %}
   </div>
-  <div data-gnl="23 kaplama">
+  <div data-gnl="18">
   {{ content }}
+  </div>
+  <div data-gnl="6">
+  {% include icerik.html %}
   </div>
   <div data-gnl="24">
   {% include foot.html %}
