--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -1,4 +1,4 @@
 <ul>
   <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
-  <li><a href="/belgeler/renk-orgusu.html">Kap Örgüsü</a></li>
+  <li><a href="/belgeler/renk-orgusu.html">Renk Örgüsü</a></li>
 </ul>
