--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -1,4 +1,10 @@
 <ul>
-  <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
+  <li><a href="/belgeler/kurulum.html">Kurulum</a></li>
+  <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a>
+    <ul>
+      <li><a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a>
+    </ul>
+  </li>
   <li><a href="/belgeler/renk-orgusu.html">Renk Örgüsü</a></li>
+  <li><a href="/belgeler/terimler.html">Terimler</a></li>
 </ul>
