--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
   {% include header.html %}
   </div>
   <div data-gnl="23">
-    <div data-gnl="3">
+    <div data-gnl="24" data-ort="3">
     {% include icerik.html %}
     </div>
-    <div data-gnl="21">
+    <div data-gnl="21" data-ort="21">
     {{ content }}
     </div>
   </div>
