--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,10 @@
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
     <ul class="menü-genel" data-gnl="0 göbekte">
-      <li><a href="https://data-deveb.github.io/belgeler/kurulum.html">Kurulum</a></li>
-      <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
-      <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
+      <li><a href="https://data-deveb.github.io/belgeler/kurulum.html">Belgeler</a></li>
       <!--<li><a href="belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/sekme-orgusu.html">Sekme</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/resim-orgusu.html">Resim</a></li>-->
-      <li><a href="https://data-deveb.github.io/belgeler/renk-orgusu.html">Renk</a></li>
-      <li><a href="https://data-deveb.github.io/belgeler/terimler.html">Terimler</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/takim.html">Takım</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
     </ul>
