--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -1,4 +1,5 @@
 <ul>
+  <li><h1>Belgeler</h1></li>
   <li><a href="/belgeler/kurulum.html">Kurulum</a></li>
   <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a>
     <ul>
