Deveb Basit Tema ilk çalışan girdi.

--- a/_layouts/tema-basit_home.html
+++ b/_layouts/tema-basit_home.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
 {% include tema-basit_head.html %}
+</head>
+<body data-gnl="ortada">
+  <div data-gnl="kaplama">
+  {{ content }}
+  </div>
+</body>
+</html>
