--- a/_layouts/tema-basit_home.html
+++ b/_layouts/tema-basit_home.html
@@ -4,6 +4,9 @@
 {% include tema-basit_head.html %}
 </head>
 <body data-gnl="ortada">
+  <header data-gnl="kaplama">
+  {% include tema-basit_header.html %}
+  </header>
   <div data-gnl="kaplama">
   {{ content }}
   </div>
