--- a/_includes/tema-basit_header.html
+++ b/_includes/tema-basit_header.html
@@ -1,3 +1,3 @@
 <div data-gnl="göbekte">
-  <img src="http://lorempixel.com/100/100/" alt="logo"> Benlogo
+  <img src="http://placehold.it/50x50/c90/000?text=Benlogo" alt="logo"> Benlogo
 </div>
