--- a/_includes/tema-basit_head.html
+++ b/_includes/tema-basit_head.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
 <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet">
-
+<link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
