--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -209,6 +209,8 @@ ul.liste-temiz li{
 	padding-bottom:4px;
 	margin:15px;
 	border:1px solid rgba(0,0,0,0.1);
+	width: 100%;
+	max-width: 300px;
 }
 [data-kart~="haber"] > *:first-child{
 	border-radius: 4px 4px 0 0;
