--- a/_includes/tema-basit_header.html
+++ b/_includes/tema-basit_header.html
@@ -1,4 +1,5 @@
 <!-- -->
-  <div data-gnl="göbekte">
-    <img src="https://placehold.it/50x50/c90/000?text=Benlogo" alt="logo"> Benlogo
+  <div data-gnl="ortada göbekte">
+    <img src="https://placehold.it/50x50/c90/000?text=Benlogo" alt="logo">
+    <h1>Benlogo</h1>
   </div>
