--- a/_includes/tema-basit_header.html
+++ b/_includes/tema-basit_header.html
@@ -1,5 +1,5 @@
 <!-- -->
   <div data-gnl="ortada göbekte">
-    <img src="https://placehold.it/50x50/c90/000?text=Benlogo" alt="logo">
+    <img data-resim="daire" src="https://placehold.it/100x100/c90/000?text=Benlogo" alt="logo">
     <h1 data-gnl="ortada">Benlogo</h1>
   </div>
