--- a/_layouts/tema-basit_home.html
+++ b/_layouts/tema-basit_home.html
@@ -4,7 +4,7 @@
 {% include tema-basit_head.html %}
 </head>
 <body data-gnl="ortada">
-  <header data-gnl="24 24p" style="background-color:#efefef; border-bottom:3px solid #ddd;">
+  <header data-gnl="24 24p" style="background-color:#efefef; border-bottom:3px solid #ddd; padding:15px 0;">
   {% include tema-basit_header.html %}
   </header>
   <div data-gnl="kaplama">
