--- a/_layouts/tema-basit_home.html
+++ b/_layouts/tema-basit_home.html
@@ -7,9 +7,11 @@
   <header data-gnl="24 24p" style="background-color:#efefef; border-bottom:3px solid #ddd; padding:15px 0;">
   {% include tema-basit_header.html %}
   </header>
-  <div data-gnl="kaplama">
-  {{ content }}
-  </div>
-  <footer>Burası Site Altı</footer>
+  <article data-gnl="24 24p">
+    <div data-gnl="kaplama">
+    {{ content }}
+    </div>
+  </article>
+  <footer data-gnl="24 24p">Burası Site Altı</footer>
 </body>
 </html>
